--- a/_posts/2020-06-28-Hello.md
+++ b/_posts/2020-06-28-Hello.md
@@ -14,4 +14,4 @@ tags:								#标签
 >这是我的第一篇博客。
 
 废了半天劲，终于把网页整好了。
-![图片来源P站，侵权删](https://github.com/ZongkaiLiu/ZongkaiLiu.github.io/blob/master/img/81973652_p0.jpg)
+![图片来源P站，侵权删](img/81973652_p0.jpg)
